--- a/challenge.html
+++ b/challenge.html
@@ -135,7 +135,7 @@
                             data-type="page-transition"
                             href="contact.html"
                             ><div class="before-span">
-                              <span data-hover="Works">Contact</span>
+                              <span data-hover="Contact">Contact</span>
                             </div></a
                           >
                         </li>
