--- a/results.html
+++ b/results.html
@@ -163,7 +163,7 @@ data-primary-color="#8c6144"
                 data-type="page-transition"
                 href="contact.html"
                 ><div class="before-span">
-                  <span data-hover="Works">Contact</span>
+                  <span data-hover="Contact">Contact</span>
                 </div></a
               >
             </li>
