--- a/about-us.html
+++ b/about-us.html
@@ -100,7 +100,7 @@
                                 data-type="page-transition"
                                 href="contact.html"
                                 ><div class="before-span">
-                                  <span data-hover="Works">Contact</span>
+                                  <span data-hover="Contact">Contact</span>
                                 </div></a
                               >
                             </li>
