--- a/Style.html
+++ b/Style.html
@@ -306,13 +306,13 @@
                           <img src="image/img-style/Sweater Vintage.png" />
                         </li>
                         <li>
-                          <img src="image/img-style/Sweater Vintage.png" />
+                          <img src="image/img-style/3.png" />
                         </li>
                         <li>
-                          <img src="image/img-style/Sweater Vintage.png" />
+                          <img src="image/img-style/5.png" />
                         </li>
                         <li>
-                          <img src="image/img-style/Sweater Vintage.png" />
+                          <img src="image/img-style/6.png" />
                         </li>
                       </ul>
                     </div>
@@ -354,10 +354,10 @@
                           <img src="image/img-style/SweaterGirl.png" />
                         </li>
                         <li>
-                          <img src="image/img-style/SweaterGirl.png" />
+                          <img src="image/img-style/7.png" />
                         </li>
                         <li>
-                          <img src="image/img-style/SweaterGirl.png" />
+                          <img src="image/img-style/8.png" />
                         </li>
                         <li>
                           <img src="image/img-style/SweaterGirl.png" />
