--- a/results.html
+++ b/results.html
@@ -319,14 +319,14 @@ data-primary-color="#8c6144"
         const recommendations = [
             { id: 1, style: 'Casual', description: 'Gaya santai cocok untuk kegiatan sehari-hari.', image: '/image/img-style/Sweater Vintage.png', condition: activity === 'home' && color === 'bright' },
             { id: 2, style: 'Streetwear', description: 'Gaya trendy cocok untuk anak muda yang suka keluar rumah.', image: '/image/img-style/Sweater Vintage.png', condition: activity === 'outside' && confidence === 'yes' },
-            { id: 3, style: 'Formal', description: 'Gaya resmi untuk acara-acara penting.', image: '/image/img-style/Sweater Vintage.png', condition: age === 'adult' && color === 'dark' },
-            { id: 4, style: 'Vintage', description: 'Gaya klasik yang cocok untuk semua umur.', image: '/image/img-style/Sweater Vintage.png', condition: color === 'dark' && gender === 'female' },
-            { id: 5, style: 'Sporty', description: 'Gaya aktif bagi yang suka olahraga.', image: '/image/img-style/Sweater Vintage.png', condition: activity === 'outside' && confidence === 'no' },
-            { id: 6, style: 'Bohemian', description: 'Gaya bebas dan artistik untuk yang kreatif.', image: '/image/img-style/Sweater Vintage.png', condition: gender === 'female' && color === 'bright' },
-            { id: 7, style: 'Minimalist', description: 'Gaya simpel dan elegan untuk mereka yang praktis.', image: '/image/img-style/Sweater Vintage.png', condition: confidence === 'yes' && color === 'dark' },
-            { id: 8, style: 'Business Casual', description: 'Gaya semi formal yang tetap nyaman.', image: '/image/img-style/Sweater Vintage.png', condition: age === 'adult' && activity === 'home' },
-            { id: 9, style: 'Athleisure', description: 'Gaya kasual dengan sentuhan olahraga.', image: '/image/img-style/Sweater Vintage.png', condition: activity === 'outside' && color === 'bright' },
-            { id: 10, style: 'Preppy', description: 'Gaya klasik dengan sentuhan modern.', image: '/image/img-style/Sweater Vintage.png', condition: gender === 'male' && confidence === 'yes' }
+            { id: 3, style: 'Formal', description: 'Gaya resmi untuk acara-acara penting.', image: '/image/img-style/6.png', condition: age === 'adult' && color === 'dark' },
+            { id: 4, style: 'Vintage', description: 'Gaya klasik yang cocok untuk semua umur.', image: '/image/img-style/SweaterGirl.png', condition: color === 'dark' && gender === 'female' },
+            { id: 5, style: 'Sporty', description: 'Gaya aktif bagi yang suka olahraga.', image: '/image/img-style/7.png', condition: activity === 'outside' && confidence === 'no' },
+            { id: 6, style: 'Bohemian', description: 'Gaya bebas dan artistik untuk yang kreatif.', image: '/image/img-style/8.png', condition: gender === 'female' && color === 'bright' },
+            { id: 7, style: 'Minimalist', description: 'Gaya simpel dan elegan untuk mereka yang praktis.', image: '/image/img-style/5.png', condition: confidence === 'yes' && color === 'dark' },
+            { id: 8, style: 'Business Casual', description: 'Gaya semi formal yang tetap nyaman.', image: '/image/img-style/4.png', condition: age === 'adult' && activity === 'home' },
+            { id: 9, style: 'Athleisure', description: 'Gaya kasual dengan sentuhan olahraga.', image: '/image/img-style/3.png', condition: activity === 'outside' && color === 'bright' },
+            { id: 10, style: 'Preppy', description: 'Gaya klasik dengan sentuhan modern.', image: '/image/img-style/3.png', condition: gender === 'male' && confidence === 'yes' }
         ];
 
         const resultsContainer = document.getElementById('results');
