--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                 <a
                                   class="slide-link"
                                   data-type="page-transition"
-                                  href="project-template.html"
+                                  href="challenge.html"
                                 ></a>
                                 <div class="section-image trigger-item-link">
                                   <img
