--- a/Style.html
+++ b/Style.html
@@ -151,15 +151,15 @@
                           >
                           <ul>
                             <li>
-                              <a href="Style.html" target="_blank">Style</a>
+                              <a href="Style.html" data-type="page-transition">Style</a>
                             </li>
                             <li>
-                              <a href="JualBeli.html" target="_blank"
+                              <a href="JualBeli.html" data-type="page-transition"
                                 >Jual Beli</a
                               >
                             </li>
                             <li>
-                              <a href="VideoEdukasi.html" target="_blank"
+                              <a href="VideoEdukasi.html" data-type="page-transition"
                                 >Edukasi</a
                               >
                             </li>
