--- a/results.html
+++ b/results.html
@@ -177,19 +177,19 @@ data-primary-color="#8c6144"
                 <li>
                   <a
                     href="Style.html"
-                    target="_blank"
+                    data-type="page-transition"
                     >Style</a
                   >
                 </li>
                 <li>
-                  <a href="JualBeli.html" target="_blank"
+                  <a href="JualBeli.html" data-type="page-transition"
                     >Jual Beli</a
                   >
                 </li>
                 <li>
                   <a
                     href="VideoEdukasi.html"
-                    target="_blank"
+                    data-type="page-transition"
                     >Edukasi</a
                   >
                 </li>
