--- a/work.html
+++ b/work.html
@@ -114,19 +114,19 @@
                                 <li>
                                   <a
                                     href="Style.html"
-                                    target="_blank"
+                                    data-type="page-transition"
                                     >Style</a
                                   >
                                 </li>
                                 <li>
-                                  <a href="JualBeli.html" target="_blank"
+                                  <a href="JualBeli.html" data-type="page-transition"
                                     >Jual Beli</a
                                   >
                                 </li>
                                 <li>
                                   <a
                                     href="VideoEdukasi.html"
-                                    target="_blank"
+                                    data-type="page-transition"
                                     >Edukasi</a
                                   >
                                 </li>
